# ACFCalculator

./: ACFcalculator  ACFcalculator.cpp  CMakeLists.txt  GROMACS_procedure.md  README.md  correlation.cpp  documentation.md  getDall.py  pullx.xvg  setup.sh  traj2diffusion.c  traj2diffusion.cpp  viscosity.cpp
examples/h2o-self/: acf.tcl  eq.conf  h2o-wat-eq.coor  h2o-wat-eq.xsc  h2o-wat.xplor.psf  prod.conf  rest.tcl
